# artisans_scripts

./: pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
src/artisans_scripts/: main.py
