[tool.poetry]
name = "artisans-scripts"
version = "0.1.0"
description = ""
authors = ["Daniel Kulla <dkulla129@gmail.com>"]
readme = "README.md"
packages = [{include = "artisans_scripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
prompt-toolkit = "^3.0.43"
attrs = "^23.2.0"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
